manifests/prod/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-client
  namespace: team-tikchalal
  labels:
    app: recipes-client
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recipes-client
      env: prod
  template:
    metadata:
      labels:
        app: recipes-client
        env: prod
    spec:
      containers:
        - name: recipes-client
          image: ghcr.io/infer-noam/recipes/recipes-client:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /run
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
      imagePullSecrets:
        - name: recipes-pull-secret
