manifests/prod/server-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-server
  namespace: team-tikchalal
  labels:
    app: recipes-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recipes-server
  template:
    metadata:
      labels:
        app: recipes-server
    spec:
      containers:
        - name: recipes-server
          image: recipes:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 250m
