manifests/prod/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-server
  namespace: team-tikchalal
  labels:
    app: recipes-server
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recipes-server
      env: prod
  template:
    metadata:
      labels:
        app: recipes-server
        env: prod
    spec:
      containers:
        - name: recipes-server
          image: ghcr.io/infer-noam/recipes/recipes-server:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 250m
          volumeMounts:
            - name: log-volume
              mountPath: /tmp/logs
      volumes:
        - name: log-volume
          emptyDir: {}
      imagePullSecrets:
        - name: recipes-pull-secret
